--- a/app.json
+++ b/app.json
@@ -32,7 +32,8 @@
     },
     "web": {
       "favicon": "./assets/favicon.png",
-      "bundler": "metro"
+      "bundler": "metro",
+      "publicPath": "/GymTracker/"
     },
     "notification": {
       "icon": "./assets/newIcon.png",
