--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "^7.1.24",
     "@react-navigation/native-stack": "^7.8.5",
     "@supabase/supabase-js": "^2.86.2",
+    "date-fns": "^4.1.0",
     "expo": "~54.0.27",
     "expo-calendar": "^15.0.8",
     "expo-clipboard": "^8.0.8",
